<li>Guard QList::removeAt().</li>
<li>Many integer conversion corrections.</li>
<li>Modified QFileInfo::lastModified() usage. It's possible that a less-than-or-equal to comparison will leave containers in unpleasant states.</li>
<li>Notify the user of URL import statistics.</li>
<li>Populate URL polarizers before performing an import.</li>
<li>Prompt before accessing a remote URL.</li>
<li>Removed input masks from IPv6 fields.</li>
<li>Replace spaces with dashes in StarBeam and e-mail attachment file names.</li>
<li>Replaced the itemClicked() signal on the e-mail table with itemDoubleClicked() as itemClicked() and itemSelectionChanged() may cause duplicate dialog prompts.</li>
<li>Require account salts to contain at least 512 bytes.</li>
<li>Require the messages in 0002a and 0002b to contain at least 64 bytes.</li>
<li>Simplified copying and exporting of public keys.</li>
<li>The method QTableWidget::findItems() may return items that are irrelevant to the query. Implemented a special column-based method.</li>
<li>Updated NTRU files (05/14/2015).</li>
<li>Verify a StarBeam's provided pulse size against some defined maximum.</li>
</ol>
2015.04.09
<ol>
<li>Added Documentation/Spot-On-Kernel.1.</li>
<li>Added the option 65536 to the File Encryption's Read Size.</li>
<li>Allow modification of StarBeam pulse sizes.</li>
<li>Automatically verify StarBeams. Please see the Options panel.</li>
<li>Corrected QSqlQuery preparation. QSqlQuery::exec() must not be used to prepare SQL statements. (spoton_listener::slotNewConnection(), spoton_misc::savePublishedNeighbo())</li>
<li>Corrected Qt DLLs in the Windows bundle.</li>
<li>Corrected inspection of QSqlQuery::exec() errors in various locations.</li>
<li>Corrected server-side processing of UDP datagrams.</li>
<li>Corrected spoton_misc::prepareUrlDistillersDatabase() and spoton_misc::prepareUrlKeysDatabase() with respect to the ok variables.</li>
<li>Improved error messages in the UI.</li>